# qoinstr

./: .clang-format  .gitignore  :w  CMakeLists.txt  README.md  joinstr.sh  justfile
src/: AccountController.cpp  AccountController.h  AccountWidget.cpp  AccountWidget.h  AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h  MouseInspector.cpp  MouseInspector.h  main.cpp
src/payloads/: Coins.cpp  Coins.h  Config.cpp  Config.h  Pools.cpp  Pools.h  Receive.cpp  Receive.h  Send.h  Settings.h
src/screens/: Coins.cpp  Coins.h  MenuTab.cpp  MenuTab.h  Pools.cpp  Pools.h  Receive.cpp  Receive.h  Send.cpp  Send.h  Settings.cpp  Settings.h  common.cpp  common.h
src/screens/modals/: CreateAccount.cpp  CreateAccount.h  CreatePool.cpp  CreatePool.h  Error.cpp  Error.h  SelectCoins.cpp  SelectCoins.h  Stop.cpp  Stop.h
src/widgets/: ComboLine.cpp  ComboLine.h  InputLine.cpp  InputLine.h
